# factorioapi

./: .gitignore  README.md  ai.md  build.py  planning-short.md  planning.md  pyproject.toml  requirements.txt  setup.py  testing.py
FactorioAPI/: Utils.py
FactorioAPI/API/Internal/: matchmaking.py  webAuth.py
FactorioAPI/Data/: Utils.py
FactorioAPI/Data/Files/: achievements.py  modSettings.py
FactorioAPI/Data/IO/: read.py  write.py
testing/: achievements Testing.py  achievements-modded.json  achievements.json  mod-settings-test.py  mod-settings.json
tests/: test-modSettings.py
